GLFW inclusion and linking done.

--- a/RealOrbit2/RealOrbit2.vcxproj.filters
+++ b/RealOrbit2/RealOrbit2.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="rendering\MeshLibrary.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="External\GLFW\Include\glfw3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="External\GLFW\Include\glfw3native.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
