--- a/RealOrbit2/imgui.ini
+++ b/RealOrbit2/imgui.ini
@@ -7,14 +7,18 @@ Pos=697,62
 Size=511,624
 
 [Window][Hello, world!]
-Pos=1,2
-Size=273,533
+Pos=0,600
+Size=1280,200
 
 [Window][Another Window]
 Pos=103,310
 Size=198,71
 
 [Window][ImGui::Begin()]
-Pos=1,535
-Size=1276,264
+Pos=141,38
+Size=586,600
+
+[Window][ASD_dsa]
+Pos=200,0
+Size=1080,600
 
